--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,13 @@ publish = false
 
 [dependencies]
 solana-program = "1.7.11"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
 thiserror = "1.0.24"
+arrayref = "0.3.6"
 
 [features]
 test-bpf = []
+no-entrypoint = []
 
 [dev-dependencies]
 assert_matches = "1.4.0"
